k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resultservice
  name: resultservice
  namespace: voteapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resultservice
  template:
    metadata:
      labels:
        app: resultservice
    spec:
      containers:
      - image: dockersamples/examplevotingapp_result
        name: resultservice
        ports:
        - containerPort: 80
          name: resultservice
