k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: voteservice
  name: voteservice
  namespace: voteapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voteservice
  template:
    metadata:
      labels:
        app: voteservice
    spec:
      imagePullSecrets:
      - name: aws-registry-key
      containers:
      - name: voteservice
        image: 733141109198.dkr.ecr.eu-west-3.amazonaws.com/voteservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
