k8s-specifications/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
  namespace: voteapp
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  selector:
    app: db
