k8s-specifications/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: resultservice
  name: resultservice
  namespace: voteapp
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 80
  selector:
    app: resultservice
